appId: ${APP_ID}
---
- launchApp
- tapOn:
    id: "network-sepolia"
- tapOn:
    id: "submit-transaction"
- assertVisible:
    id: "transaction-pending"
