appId: ${APP_ID}
---
- launchApp
- tapOn:
    id: "network-vara-testnet"
- tapOn:
    id: "submit-transaction"
- assertVisible:
    id: "transaction-pending"
